nombres eng ok. iconos alineados ok

--- a/menu.html
+++ b/menu.html
@@ -5170,9 +5170,9 @@
 									<img class="w-70 my-2em" src="https://pendulo.com/archivos/importadas.png" alt="">
 								</a>
 								<div class="text-left p1 fz-1--5">
-									<div class="collapse show" id="collapseCervezas2">
-										<!--<img src="./img/fotos/cervezas-artesanales.jpg" alt=""
-											style="width: 100%; margin: 10px 0;">-->
+									<div class="collapse show" id="collapseCervezasBeb2">
+										<!-- <img src="./img/fotos/cervezas-artesanales.jpg" alt=""
+											style="width: 100%; margin: 10px 0;"> -->
 										<div class="flex-rz space-between">
 											<p class="name arvo">HANABI</p>
 											<span class="line-1"></span>
@@ -5198,7 +5198,10 @@
 										<p class="roboto-condensed brown-text">MÉXICO - RED ALE</p>
 	
 										<div class="flex-rz space-between mt-1em">
-											<p class="name arvo">COLIMITA LAGER</p>
+											<div class="flex-rz space-between items-baseline">
+												<p class="name arvo flex-start">COLIMITA LAGER </p>
+												<img class="ml-5px" src="https://pendulo.com/archivos/d1.png" alt="">
+											</div>
 											<span class="line-1"></span>
 											<p class="name roboto-condensed"><span class="mustache-text pr-5px">355
 													ml</span>$115</p>
@@ -5206,7 +5209,10 @@
 										<p class="roboto-condensed brown-text">MÉXICO - LAGER</p>
 	
 										<div class="flex-rz space-between mt-1em">
-											<p class="name arvo">LA MONTAÑA BLONDE ALER</p>
+											<div class="flex-rz space-between items-baseline">
+												<p class="name arvo flex-start">LA MONTAÑA BLONDE ALE </p>
+												<img class="ml-5px" src="https://pendulo.com/archivos/d1.png" alt="">
+											</div>
 											<span class="line-1"></span>
 											<p class="name roboto-condensed"><span class="mustache-text pr-5px">355
 													ml</span>$105</p>
@@ -5214,7 +5220,10 @@
 										<p class="roboto-condensed brown-text">MÉXICO - BLONDE ALE</p>
 	
 										<div class="flex-rz space-between mt-1em">
-											<p class="name arvo">TEMPUS RESERVA ESPECIAL</p>
+											<div class="flex-rz space-between items-baseline">
+												<p class="name arvo flex-start">TEMPUS RESERVA ESPECIAL </p>
+												<img class="ml-5px" src="https://pendulo.com/archivos/d1.png" alt="">
+											</div>
 											<span class="line-1"></span>
 											<p class="name roboto-condensed"><span class="mustache-text pr-5px">355
 													ml</span>$92</p>
@@ -5222,7 +5231,10 @@
 										<p class="roboto-condensed brown-text">MÉXICO - ALE ESTILO ESCOCES</p>
 	
 										<div class="flex-rz space-between mt-1em">
-											<p class="name arvo">LA MONTAÑA PORTER</p>
+											<div class="flex-rz space-between items-baseline">
+												<p class="name arvo flex-start">LA MONTAÑA PORTER </p>
+												<img class="ml-5px" src="https://pendulo.com/archivos/d1.png" alt="">
+											</div>
 											<span class="line-1"></span>
 											<p class="name roboto-condensed"><span class="mustache-text pr-5px">355
 													ml</span>$106</p>
@@ -5230,7 +5242,10 @@
 										<p class="roboto-condensed brown-text">MÉXICO - PORTER</p>
 	
 										<div class="flex-rz space-between mt-1em">
-											<p class="name arvo">PORTER COLIMA</p>
+											<div class="flex-rz space-between items-baseline">
+												<p class="name arvo flex-start">PORTER COLIMA </p>
+												<img class="ml-5px" src="https://pendulo.com/archivos/d1.png" alt="">
+											</div>
 											<span class="line-1"></span>
 											<p class="name roboto-condensed"><span class="mustache-text pr-5px">355
 													ml</span>$121</p>
