imagenes titulos esp ok

--- a/menu.html
+++ b/menu.html
@@ -1297,7 +1297,7 @@
 					<div class="col-md-4"></div>
 					<div class="col-11 col-md-4 px-0 text-center collapse-button">
 						<a class="collapse-button" data-toggle="collapse" href="#collapseEntradas" aria-expanded="true">
-							<img class="w-70 my-2em" src="https://pendulo.com/archivos/titulo_entradas.png" alt="">
+							<img class="w-60 my-2em" src="https://pendulo.com/archivos/titulo-menu-entradas.png" alt="">
 						</a>
 					</div>
 					<div class="col-md-4"></div>
@@ -1423,7 +1423,7 @@
 					<div class="col-11 col-md-4 px-0 text-center collapse-button">
 						<a class="collapse-button" data-toggle="collapse" href="#collapseEnsaladas"
 							aria-expanded="true">
-							<img class="w-70 my-2em" src="https://pendulo.com/archivos/ensaladas.png" alt="">
+							<img class="w-70 my-2em" src="https://pendulo.com/archivos/titulo-menu-ensaladas.png" alt="">
 						</a>
 					</div>
 					<div class="col-md-4"></div>
@@ -1547,7 +1547,7 @@
 					<div class="col-md-4"></div>
 					<div class="col-11 col-md-4 px-0 text-center collapse-button">
 						<a class="collapse-button" data-toggle="collapse" href="#collapseSopas" aria-expanded="true">
-							<img class="w-60 my-2em" src="https://pendulo.com/archivos/caldos_y_sopas.png" alt="">
+							<img class="w-60 my-2em" src="https://pendulo.com/archivos/titulo-menu-caldos.png" alt="">
 						</a>
 					</div>
 					<div class="col-md-4"></div>
@@ -1717,7 +1717,7 @@
 					<div class="col-md-4"></div>
 					<div class="col-11 col-md-4 px-0 text-center collapse-button">
 						<a class="collapse-button" data-toggle="collapse" href="#collapsePastas" aria-expanded="true">
-							<img class="w-70 my-2em" src="https://pendulo.com/archivos/pasta.png" alt="">
+							<img class="w-70 my-2em" src="https://pendulo.com/archivos/titulo-menu-pastafresca.png" alt="">
 						</a>
 					</div>
 					<div class="col-md-4"></div>
@@ -1876,7 +1876,7 @@
 					<div class="col-md-4"></div>
 					<div class="col-11 col-md-4 px-0 text-center collapse-button">
 						<a class="collapse-button" data-toggle="collapse" href="#collapseBotanas" aria-expanded="true">
-							<img class="w-70 my-2em" src="https://pendulo.com/archivos/botanas.png" alt="">
+							<img class="w-60 my-2em" src="https://pendulo.com/archivos/titulo-menu-botanas.png" alt="">
 						</a>
 					</div>
 					<div class="col-md-4"></div>
@@ -2113,7 +2113,7 @@
 					<div class="col-md-4"></div>
 					<div class="col-11 col-md-4 px-0 text-center collapse-button">
 						<a class="collapse-button" data-toggle="collapse" href="#collapseFuerte" aria-expanded="true">
-							<img class="w-70 my-2em" src="https://pendulo.com/archivos/platos_fuertes.png" alt="">
+							<img class="w-70 my-2em" src="https://pendulo.com/archivos/titulo-menu-platosfuertes.png" alt="">
 						</a>
 					</div>
 					<div class="col-md-4"></div>
@@ -2531,7 +2531,7 @@
 					<div class="col-md-4"></div>
 					<div class="col-11 col-md-4 px-0 text-center collapse-button">
 						<a class="collapse-button" data-toggle="collapse" href="#collapseSandwich" aria-expanded="true">
-							<img class="w-80 my-2em" src="https://pendulo.com/archivos/hamburguesas.png" alt="">
+							<img class="w-80 my-2em" src="https://pendulo.com/archivos/titulo-menu-sandwich.png" alt="">
 						</a>
 					</div>
 					<div class="col-md-4"></div>
@@ -2819,23 +2819,23 @@
 					</div>
 					<div class="col-md-4"></div>
 				</div>
-				<div class="row">
-					<div class="col-md-4"></div>
-					<div class="col-md-4 text-center">
-						<div class="text-left p1 fz-1--5">
-							<p class="roboto-condensed brown-text text-center">Servidos a partir de las 19 hrs.</p>
-						</div>
-					</div>
-					<div class="col-md-4"></div>
-				</div>
 				<div class="collapse show" id="collapseAfterDark">
+					<div class="row">
+						<div class="col-md-4"></div>
+						<div class="col-md-4 text-center">
+							<div class="text-left p1 fz-1--5">
+								<p class="roboto-condensed brown-text text-center">Servidos a partir de las 19 hrs.</p>
+							</div>
+						</div>
+						<div class="col-md-4"></div>
+					</div>
 					<!--PARA EMPEZAR NOCTUS-->
 					<div class="row">
 						<div class="col-md-4"></div>
 						<div class="col-11 col-md-4 px-0 text-center collapse-button">
 							<a class="collapse-button" data-toggle="collapse" href="#collapseEmpezarNoc"
 								aria-expanded="true">
-								<img class="w-60 my-2em" src="https://pendulo.com/archivos/paraempezar-noct.png" alt="">
+								<img class="my-2em" src="https://pendulo.com/archivos/paraempezar-noct.png" alt="">
 							</a>
 						</div>
 						<div class="col-md-4"></div>
@@ -2939,7 +2939,7 @@
 						<div class="col-md-4"></div>
 						<div class="col-11 col-md-4 px-0 text-center collapse-button">
 							<a class="collapse-button" data-toggle="collapse" href="#collapseClasicoNoc" aria-expanded="true">
-								<img class="w-50 my-2em" src="https://pendulo.com/archivos/lotipico-noct.png" alt="">
+								<img class="my-2em" src="https://pendulo.com/archivos/lotipico-noct.png" alt="">
 							</a>
 						</div>
 						<div class="col-md-4"></div>
@@ -3140,7 +3140,7 @@
 						<div class="col-11 col-md-4 px-0 text-center collapse-button">
 							<a class="collapse-button" data-toggle="collapse" href="#collapseSazonNoc"
 								aria-expanded="true">
-								<img class="w-60 my-2em" src="https://pendulo.com/archivos/nuestrasazon-noct.png"
+								<img class="my-2em" src="https://pendulo.com/archivos/nuestrasazon-noct.png"
 									alt="">
 							</a>
 						</div>
@@ -3234,7 +3234,7 @@
 						<div class="col-11 col-md-4 px-0 text-center collapse-button">
 							<a class="collapse-button" data-toggle="collapse" href="#collapseChilaquilesNoc"
 								aria-expanded="true">
-								<img class="w-50 my-2em" src="https://pendulo.com/archivos/chilaquiles-noct.png">
+								<img class="my-2em" src="https://pendulo.com/archivos/chilaquiles-noct.png">
 							</a>
 						</div>
 						<div class="col-md-4"></div>
@@ -3287,7 +3287,7 @@
 								<div class="col-12">
 									<a class="collapse-button" data-toggle="collapse" href="#collapseHotCakesNoc"
 										aria-expanded="true">
-										<img class="w-80 my-2em" src="https://pendulo.com/archivos/hotcakes-noct.png" alt="">
+										<img class="my-2em" src="https://pendulo.com/archivos/hotcakes-noct.png" alt="">
 									</a>
 								</div>
 							</div>
@@ -3638,7 +3638,7 @@
 					<div class="col-md-4"></div>
 					<div class="col-11 col-md-4 px-0 text-center collapse-button">
 						<a class="collapse-button" data-toggle="collapse" href="#collapseCafes" aria-expanded="true">
-							<img  class="w-50 my-2em" src="https://pendulo.com/archivos/nuestro-cafe.png" alt="">
+							<img  class="w-70 my-2em" src="https://pendulo.com/archivos/titulo-menu-cafe.png" alt="">
 						</a>
 					</div>
 					<div class="col-md-4"></div>
@@ -3944,7 +3944,7 @@
 					<div class="col-md-4"></div>
 					<div class="col-11 col-md-4 px-0 text-center collapse-button">
 						<a class="collapse-button" data-toggle="collapse" href="#collapseTes" aria-expanded="true">
-							<img class="w-70 my-2em" src="https://pendulo.com/archivos/te.png" alt="">
+							<img class="w-70 my-2em" src="https://pendulo.com/archivos/titulo-menu-tes.png" alt="">
 						</a>
 					</div>
 					<div class="col-md-4"></div>
@@ -4138,7 +4138,7 @@
 					<div class="col-md-4"></div>
 					<div class="col-11 col-md-4 px-0 text-center collapse-button">
 						<a class="collapse-button" data-toggle="collapse" href="#collapseMatchas" aria-expanded="true">
-							<img class="w-70 my-2em" src="https://pendulo.com/archivos/matcha.png" alt="">
+							<img class="w-70 my-2em" src="https://pendulo.com/archivos/titulo-menu-matcha.png" alt="">
 						</a>
 					</div>
 					<div class="col-md-4"></div>
@@ -4252,7 +4252,7 @@
 					<div class="col-md-4"></div>
 					<div class="col-11 col-md-4 px-0 text-center collapse-button">
 						<a class="collapse-button" data-toggle="collapse" href="#collapseMalteadas" aria-expanded="true">
-							<img class="w-70 my-2em" src="https://pendulo.com/archivos/batidos.png" alt="">
+							<img class="w-70 my-2em" src="https://pendulo.com/archivos/titulo-menu-malteadas.png" alt="">
 						</a>
 					</div>
 					<div class="col-md-4"></div>
@@ -4474,7 +4474,7 @@
 					<div class="col-md-4"></div>
 					<div class="col-11 col-md-4 px-0 text-center collapse-button">
 						<a class="collapse-button" data-toggle="collapse" href="#collapseCervezasBeb" aria-expanded="true">
-							<img class="w-70 my-2em" src="https://pendulo.com/archivos/cervezas-sm.png" alt="">
+							<img class="w-70 my-2em" src="https://pendulo.com/archivos/titulo-menu-cervezas.png" alt="">
 						</a>
 					</div>
 					<div class="col-md-4"></div>
@@ -4622,7 +4622,7 @@
 					<div class="col-md-4"></div>
 					<div class="col-11 col-md-4 px-0 text-center collapse-button">
 						<a class="collapse-button" data-toggle="collapse" href="#collapseVinosBeb" aria-expanded="true">
-							<img class="w-70 my-2em" src="https://pendulo.com/archivos/vinos.png" alt="">
+							<img class="w-70 my-2em" src="https://pendulo.com/archivos/titulo-menu-vinos.png" alt="">
 						</a>
 					</div>
 					<div class="col-md-4"></div>
@@ -4757,7 +4757,7 @@
 					<div class="col-md-4"></div>
 					<div class="col-11 col-md-4 px-0 text-center collapse-button">
 						<a class="collapse-button" data-toggle="collapse" href="#collapseBarBebidas" aria-expanded="true">
-							<img class="w-60 my-2em" src="https://pendulo.com/archivos/bar.png" alt="">
+							<img class="w-70 my-2em" src="https://pendulo.com/archivos/titulo-menu-bar.png" alt="">
 						</a>
 					</div>
 					<div class="col-md-4"></div>
@@ -4805,7 +4805,7 @@
 					<div class="col-md-4"></div>
 					<div class="col-11 col-md-4 px-0 text-center collapse-button">
 						<a class="collapse-button" data-toggle="collapse" href="#collapseJugosBeb" aria-expanded="true">
-							<img class="w-70 my-2em" src="https://pendulo.com/archivos/nuestros-jugos.png" alt="">
+							<img class="w-70 my-2em" src="https://pendulo.com/archivos/titulo-menu-jugos2.png" alt="">
 						</a>
 					</div>
 					<div class="col-md-4"></div>
@@ -4934,7 +4934,7 @@
 					<div class="col-md-4"></div>
 					<div class="col-11 col-md-4 px-0 text-center collapse-button">
 						<a class="collapse-button" data-toggle="collapse" href="#collapseOtros" aria-expanded="true">
-							<img class="w-70 my-2em" src="https://pendulo.com/archivos/otras-titulo.png" alt="">
+							<img class="w-70 my-2em" src="https://pendulo.com/archivos/titulo-menu-otras.png" alt="">
 						</a>
 					</div>
 					<div class="col-md-4"></div>
@@ -5087,7 +5087,7 @@
 							<div class="col-md-4"></div>
 							<div class="col-11 col-md-4 px-0 text-center collapse-button">
 								<a class="collapse-button" data-toggle="collapse" href="#collapseMargaritas" aria-expanded="true">
-									<img class="w-50 my-2em" src="https://pendulo.com/archivos/margaritas.png" alt="">
+									<img class="w-70 my-2em" src="https://pendulo.com/archivos/titulo-menu-margaritas.png" alt="">
 								</a>
 							</div>
 							<div class="col-md-4"></div>
@@ -5164,7 +5164,7 @@
 							<div class="col-md-4"></div>
 							<div class="col-11 col-md-4 px-0 text-center collapse-button">
 								<a class="collapse-button" data-toggle="collapse" href="#collapseMartinis" aria-expanded="true">
-									<img class="w-50 my-2em" src="https://pendulo.com/archivos/martinis.png" alt="">
+									<img class="w-70 my-2em" src="https://pendulo.com/archivos/titulo-menu-martinis.png" alt="">
 								</a>
 							</div>
 							<div class="col-md-4"></div>
@@ -5283,7 +5283,7 @@
 							<div class="col-md-4"></div>
 							<div class="col-11 col-md-4 px-0 text-center collapse-button">
 								<a class="collapse-button" data-toggle="collapse" href="#collapseMezcal" aria-expanded="true">
-									<img class="w-60 my-2em" src="https://pendulo.com/archivos/mezcal.png" alt="">
+									<img class="w-70 my-2em" src="https://pendulo.com/archivos/titulo-menu-conmezcal.png" alt="">
 								</a>
 							</div>
 							<div class="col-md-4"></div>
@@ -5376,7 +5376,7 @@
 							<div class="col-md-4"></div>
 							<div class="col-11 col-md-4 px-0 text-center collapse-button">
 								<a class="collapse-button" data-toggle="collapse" href="#collapseAperol" aria-expanded="true">
-									<img class="w-70 my-2em" src="https://pendulo.com/archivos/aperol.png" alt="">
+									<img class="w-70 my-2em" src="https://pendulo.com/archivos/titulo-menu-aperol.png" alt="">
 								</a>
 							</div>
 							<div class="col-md-4"></div>
@@ -5442,7 +5442,7 @@
 							<div class="col-md-4"></div>
 							<div class="col-11 col-md-4 px-0 text-center collapse-button">
 								<a class="collapse-button" data-toggle="collapse" href="#collapseCafePiq" aria-expanded="true">
-									<img class="w-50 my-2em" src="https://pendulo.com/archivos/cafes-piquete.png" alt="">
+									<img class="w-70 my-2em" src="https://pendulo.com/archivos/titulo-menu-cafepiquete.png" alt="">
 								</a>
 							</div>
 							<div class="col-md-4"></div>
@@ -5559,7 +5559,7 @@
 							<div class="col-md-4"></div>
 							<div class="col-11 col-md-4 px-0 text-center collapse-button">
 								<a class="collapse-button" data-toggle="collapse" href="#collapseTradicionales" aria-expanded="true">
-									<img class="w-70 my-2em" src="https://pendulo.com/archivos/los-tradicionales.png"
+									<img class="w-80 my-2em" src="https://pendulo.com/archivos/titulo-menu-tradicionales.png"
 									alt="">
 								</a>
 							</div>
@@ -5758,7 +5758,7 @@
 					<div class="col-md-4"></div>
 					<div class="col-11 col-md-4 px-0 text-center collapse-button">
 						<a class="collapse-button" data-toggle="collapse" href="#collapseBar" aria-expanded="true">
-							<img class="w-70 my-2em" src="https://pendulo.com/archivos/bar.png" alt="">
+							<img class="w-70 my-2em" src="https://pendulo.com/archivos/titulo-menu-bar.png" alt="">
 						</a>
 					</div>
 					<div class="col-md-4"></div>
@@ -5769,7 +5769,7 @@
 						<div class="col-md-4"></div>
 						<div class="col-11 col-md-4 px-0 text-center collapse-button">
 							<a class="collapse-button" data-toggle="collapse" href="#collapseCervezas" aria-expanded="true">
-								<img class="w-50 my-2em" src="https://pendulo.com/archivos/cervezas-titulo.png" alt="">
+								<img class="w-70 my-2em" src="https://pendulo.com/archivos/titulo-menu-cervezas.png" alt="">
 							</a>
 						</div>
 						<div class="col-md-4"></div>
@@ -5951,7 +5951,7 @@
 						<div class="col-md-4"></div>
 						<div class="col-11 col-md-4 px-0 text-center collapse-button">
 							<a class="collapse-button" data-toggle="collapse" href="#collapseVinos" aria-expanded="true">
-								<img class="w-70 my-2em" src="https://pendulo.com/archivos/vinos.png" alt="">
+								<img class="w-70 my-2em" src="https://pendulo.com/archivos/titulo-menu-vinos.png" alt="">
 							</a>
 						</div>
 						<div class="col-md-4"></div>
