ultimos cambios pre junta

--- a/menu-bar.html
+++ b/menu-bar.html
@@ -47,7 +47,7 @@
 					</span>
 					<!-- <span class="mx-10px d-flex items-baseline">
 						<img class="pr-5px" src="https://pendulo.com/archivos/d3.png" alt="">
-						<p class="bebas contents fz-1--7">Light</p>
+						<p class="bebas contents fz-1--5">Light</p>
 					</span> -->
 					<span class="mx-10px d-flex items-baseline">
 						<img class="pr-5px" src="https://pendulo.com/archivos/d4.png" alt="">
@@ -83,7 +83,7 @@
 
 		<div class="tab-content">
 			<!--DESAYUNO-->
-			<div class="tab-pane container active" id="desayunos">
+			<div class="tab-pane container" id="desayunos">
 				<p class="text-2 py-3em">EL MENÚ DE DESAYUNOS ESTÁ DISPONIBLE TODOS LOS DÍAS HASTA LA 1:00 P.M.</p>
 				<!--JUGOS-->
 				<div class="row">
@@ -5068,7 +5068,7 @@
 			</div>
 
 			<!--¿BÆR?-->
-			<div class="tab-pane container" id="bar" role="tabpanel" aria-labelledby="contact-tab">
+			<div class="tab-pane container active" id="bar" role="tabpanel" aria-labelledby="contact-tab">
 				<!--COPTELERÍÆ-->
 				<div class="row">
 					<div class="col-md-4"></div>
@@ -5754,7 +5754,7 @@
 						</div>
 					</div>
 				</div>
-				<!-- <div class="row">
+				<div class="row">
 					<div class="col-md-4"></div>
 					<div class="col-11 col-md-4 px-0 text-center collapse-button">
 						<a class="collapse-button" data-toggle="collapse" href="#collapseBar" aria-expanded="true">
@@ -5762,7 +5762,7 @@
 						</a>
 					</div>
 					<div class="col-md-4"></div>
-				</div> -->
+				</div>
 				<div class="collapse show" id="collapseBar">
 					<!--CERVEZÆS-->
 					<div class="row">
