--- a/menu-ing.html
+++ b/menu-ing.html
@@ -36,19 +36,19 @@
 				<div class="center-center pb-5">
 					<span class="mx-10px d-flex items-baseline">
 						<img class="pr-5px" src="https://pendulo.com/archivos/d1.png" alt="">
-						<p class="bebas contents fz-1--5">New</p>
+						<p class="bebas contents fz-1--7">New</p>
 					</span>
 					<span class="mx-10px d-flex items-center">
 						<img class="pr-5px" src="https://pendulo.com/archivos/d2.png" alt="">
-						<p class="bebas contents fz-1--5">Vegetarian</p>
+						<p class="bebas contents fz-1--7">Vegetarian</p>
 					</span>
-					<span class="mx-10px d-flex items-baseline">
+					<!-- <span class="mx-10px d-flex items-baseline">
 						<img class="pr-5px" src="https://pendulo.com/archivos/d3.png" alt="">
-						<p class="bebas contents fz-1--5">Light</p>
-					</span>
+						<p class="bebas contents fz-1--7">Light</p>
+					</span> -->
 					<span class="mx-10px d-flex items-baseline">
 						<img class="pr-5px" src="https://pendulo.com/archivos/d4.png" alt="">
-						<p class="bebas contents fz-1--5">New Recipe</p>
+						<p class="bebas contents fz-1--7">New Recipe</p>
 					</span>
 				</div>
 			</div>
