--- a/index.html
+++ b/index.html
@@ -95,19 +95,19 @@
 					</a>
 				</div>
 				<div class="col-sm-6 col-md-6 col-lg-6 buttons_height buttons_padding-right-1">
-					<a class="not-under" href="https://pendulo.com/archivos/manteleta_infantil_abril.jpg"
+					<a class="not-under" href="https://pendulo.com/especial/menu-infantil"
 						target="_blank">
 						<p class="menu_button bg-3" id="inf">Menú infantil</p>
 					</a>
 				</div>
 				<div class="col-sm-6 col-md-6 col-lg-6 buttons_height buttons_padding-left-2">
-					<a class="not-under" href="https://pendulo.com/archivos/bar_chico_web_2022.jpg" target="_blank">
+					<a class="not-under" href="menu-bar.html" target="_blank">
 						<p class="menu_button bg-4" id="Bar">Bar</p>
 					</a>
 				</div>
 				<div class="col-sm-6 col-md-6 col-lg-6 buttons_height buttons_padding-right-2" lang="en">
 					<a class="not-under"
-						href="https://xd.adobe.com/view/fcabd343-7a79-40d9-9485-9ec5a7724313-a9f8/?fullscreen&hints=on"
+						href="https://pendulo.com/especial/especialidades-30-aniversario"
 						target="_blank">
 						<p class="menu_button bg-5 break-word" id="prom">Especiales</p>
 					</a>
