--- a/menu.html
+++ b/menu.html
@@ -4511,6 +4511,7 @@
 										<p class="name roboto-condensed circle-1">$63</p>
 										<p class="mustache-text roboto-condensed m0">355 ml</p>
 									</div>
+									<div class="flex-rz center al-center"><img src="./img/fotos/cervezas-img.jpg" alt="" style="width: 80%; margin: 10px auto;"></div>
 								</div>
 							</div>
 						</div>
@@ -4766,35 +4767,74 @@
 					<div class="row">
 						<div class="col-md-4 text-center">
 							<div class="text-left p1 fz-1--5">
-								<div class="flex-rz space-between">
-									<p class="name arvo">APEROL SPRITZ</p>
-									<span class="line-1"></span>
-									<p class="name roboto-condensed"><span class="mustache-text pr-5px">250
-											ml</span>$155</p>
+								<div class="d-flex justify-content-between">
+									<a class="collapse-button" data-toggle="collapse" href="#collapseBarBebidas1"
+										role="button" aria-expanded="true" style="text-decoration: none;">
+										<p class="name arvo">APEROL SPRITZ</p>
+									</a>
+									<a class="collapse-button collapsed" data-toggle="collapse" href="#collapseBarBebidas1"
+										aria-expanded="true">
+										<i class="fa fa-plus"></i>
+									</a>
 								</div>
-								<p class="roboto-condensed brown-text">Clásico aperitivo de origen italiano con Aperol (a base de hierbas) y vino espumoso.</p>
+								<div class="flex-rz space-between">
+									<p class="name roboto-condensed"><span class="mustache-text">250 ml</span></p>
+									<span class="line-1"></span>
+									<p class="name roboto-condensed"> $155</p>
+								</div>
+								<div class="collapse" id="collapseBarBebidas1">
+									<img src="./img/fotos/aperol-spritz.jpg" alt=""
+										style="width: 100%; margin: 10px 0;">
+										<p class="roboto-condensed brown-text mb-0">Clásico aperitivo de origen italiano con Aperol (a base de hierbas) y vino espumoso.</p>
+								</div>
 							</div>
 						</div>
 						<div class="col-md-4 text-center">
 							<div class="text-left p1 fz-1--5">
-								<div class="flex-rz space-between">
-									<p class="name arvo">APEROL BOURBON</p>
-									<span class="line-1"></span>
-									<p class="name roboto-condensed"><span class="mustache-text pr-5px">240
-											ml</span>$135</p>
+								<div class="d-flex justify-content-between">
+									<a class="collapse-button" data-toggle="collapse" href="#collapseBarBebidas2"
+										role="button" aria-expanded="true" style="text-decoration: none;">
+										<p class="name arvo">APEROL BOURBON</p>
+									</a>
+									<a class="collapse-button collapsed" data-toggle="collapse" href="#collapseBarBebidas2"
+										aria-expanded="true">
+										<i class="fa fa-plus"></i>
+									</a>
 								</div>
-								<p class="roboto-condensed brown-text">Excelente combinación de la casa a base de Aperol, Jack Daniel´s y limón.</p>
+								<div class="flex-rz space-between">
+									<p class="name roboto-condensed"><span class="mustache-text">240 ml</span></p>
+									<span class="line-1"></span>
+									<p class="name roboto-condensed"> $135</p>
+								</div>
+								<div class="collapse" id="collapseBarBebidas2">
+									<img src="./img/fotos/aperol-bourbon.jpg" alt=""
+										style="width: 100%; margin: 10px 0;">
+										<p class="roboto-condensed brown-text mb-0">Excelente combinación de la casa a base de Aperol, Jack Daniel´s y limón.</p>
+								</div>
 							</div>
 						</div>
 						<div class="col-md-4 text-center">
 							<div class="text-left p1 fz-1--5">
-								<div class="flex-rz space-between">
-									<p class="name arvo">CARAJILLO</p>
-									<span class="line-1"></span>
-									<p class="name roboto-condensed"><span class="mustache-text pr-5px">120
-											ml</span>$155</p>
+								<div class="d-flex justify-content-between">
+									<a class="collapse-button" data-toggle="collapse" href="#collapseBarBebidas3"
+										role="button" aria-expanded="true" style="text-decoration: none;">
+										<p class="name arvo">CARAJILLO</p>
+									</a>
+									<a class="collapse-button collapsed" data-toggle="collapse" href="#collapseBarBebidas3"
+										aria-expanded="true">
+										<i class="fa fa-plus"></i>
+									</a>
 								</div>
-								<p class="roboto-condensed brown-text">Frio con Licor 43 y café espresso.</p>
+								<div class="flex-rz space-between">
+									<p class="name roboto-condensed"><span class="mustache-text">120 ml</span></p>
+									<span class="line-1"></span>
+									<p class="name roboto-condensed"> $155</p>
+								</div>
+								<div class="collapse" id="collapseBarBebidas3">
+									<img src="./img/fotos/carajillo.jpg" alt=""
+										style="width: 100%; margin: 10px 0;">
+										<p class="roboto-condensed brown-text mb-0">Frio con Licor 43 y café espresso.</p>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -5805,6 +5845,7 @@
 											<p class="name roboto-condensed circle-1">$63</p>
 											<p class="mustache-text roboto-condensed m0">355 ml</p>
 										</div>
+										<div class="flex-rz center al-center"><img src="./img/fotos/cervezas-img.jpg" alt="" style="width: 80%; margin: 10px auto;"></div>
 									</div>
 								</div>
 							</div>
