Cambios extra en menú ingles, faltan cambios a menú bar y botones de idioma de index

--- a/index-ing.html
+++ b/index-ing.html
@@ -37,11 +37,11 @@
 	</div>
 	<div class="container-fluid relative" style="margin-top: -200px">
 		<div class="header_language-buttons">
-			<button class="btn-lang">ESP</button><span class="white-text">/</span>
-			<button class="btn-lang" id="eng">ENG</button>
+			<button class="btn-lang" onclick="changeLang('es')">ESP</button><span class="white-text">/</span>
+			<button class="btn-lang" id="eng" onclick="changeLang('en')">ENG</button>
 		</div>
 		<a class="not-under absolute-center" href="https://pendulo.com/index.php">
-			<h1 class="text-center m--5-0 white-text" id="t1">Restaurante</h1>
+			<h1 class="text-center m--5-0 white-text" id="t1">Restaurant</h1>
 		</a>
 		<!--sucursales-->
 		<div class="row">
@@ -85,31 +85,31 @@
 			</div>
 			<div class="col-md-4 p0-rz row buttons_margin p0">
 				<div class="col-sm-12 col-md-12 col-lg-12 buttons_height buttons_padding_x">
-					<a class="not-under" id="eng-menu" href="menu.html">
-						<p class=" mt-15 menu_button bg-1" id="Menu">Menú</p>
+					<a class="not-under" id="eng-menu" href="menu-ing.html">
+						<p class=" mt-15 menu_button bg-1" id="Menu">Menu</p>
 					</a>
 				</div>
 				<div class="col-sm-6 col-md-6 col-lg-6 buttons_height buttons_padding-left-1">
-					<a class="not-under" id="eng-bar" href="https://pendulo.com/especial/menu-del-dia" target="_blank">
-						<p class="menu_button bg-2" id="Bar">Menú del día</p>
+					<a class="not-under" id="eng-bar" href="https://pendulo.com/especial/daily-meal" target="_blank">
+						<p class="menu_button bg-2" id="Bar">Daily Meal</p>
 					</a>
 				</div>
 				<div class="col-sm-6 col-md-6 col-lg-6 buttons_height buttons_padding-right-1">
-					<a class="not-under" href="https://pendulo.com/especial/menu-infantil"
+					<a class="not-under" href="https://pendulo.com/especial/kids-menu/367/"
 						target="_blank">
-						<p class="menu_button bg-3" id="inf">Menú infantil</p>
+						<p class="menu_button bg-3" id="inf">Kid's Menu</p>
 					</a>
 				</div>
 				<div class="col-sm-6 col-md-6 col-lg-6 buttons_height buttons_padding-left-2">
-					<a class="not-under" href="menu-bar.html" target="_blank">
+					<a class="not-under" href="menu-ing-bar.html" target="_blank">
 						<p class="menu_button bg-4" id="Bar">Bar</p>
 					</a>
 				</div>
 				<div class="col-sm-6 col-md-6 col-lg-6 buttons_height buttons_padding-right-2" lang="en">
 					<a class="not-under"
-						href="https://pendulo.com/especial/especialidades-30-aniversario"
+						href="https://pendulo.com/especial/anniversary-specials"
 						target="_blank">
-						<p class="menu_button bg-5 break-word" id="prom">Especiales</p>
+						<p class="menu_button bg-5 break-word" id="prom">Specials</p>
 					</a>
 				</div>
 			</div>
