--- a/menu-ing.html
+++ b/menu-ing.html
@@ -23,7 +23,10 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
-				<img class="logo-1" src="img/logo0.png" alt="">
+				<a class="logo-img" href="index-ing.html" >
+					<img class="logo-1" src="img/logo0.png" alt="">
+				</a>
+
 				<div class="header_language-buttons-2">
 					<button class="btn-lang-off" id="esp" onclick="location.href='menu.html'" type="button">ESP</button>
 					<button class="btn-lang-on" id="eng" type="button">ENG</button>
@@ -31,7 +34,7 @@
 			</div>
 			<div id="menu-items" class="col-md-12">
 				<span class="center-center">
-					<a class="z-5 d-flex items-center" style="text-decoration: none;" href="index.html"><span><i class="fas fa-arrow-left"></span></i><h2 class="subtitle-4">MENU</h2></a>
+					<a class="z-5 d-flex items-center" style="text-decoration: none;" href="index-ing.html"><span><i class="fas fa-arrow-left"></span></i><h2 class="subtitle-4">MENU</h2></a>
 				</span>
 				<div class="center-center pb-5">
 					<span class="mx-10px d-flex items-baseline">
